--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
     </dependencies>
 
     <build>
+        <finalName>apiteraApp</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
